--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
+        android:onClick="MgSnack"
         android:text="Send"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
